# Fast-RLS-DCD-C-language

./: CMakeLists.txt  README.md  echo_canceling.c  echo_canceling.h  main.c
DCBF_RLSDCD/: DCBF_RLSDCD.c  DCBF_RLSDCD.h
matrix_operations/: DCBF_operations.c  DCBF_operations.h  Standard_operations.c  Standard_operations.h
standard_RLSDCD/: standard_RLSDCD.c  standard_RLSDCD.h
